# 42sh

./: .__afs343  .gitlab-ci.yml  Makefile  README.md  clionconfig.sh  fc  file  meson.build  test
builddir/: .__afsD254  .ninja_deps  .ninja_log  42sh  build.ninja  compile_commands.json  echo_tests  tests
builddir/doc/: Doxyfile
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-installed.json  intro-targets.json  intro-tests.json  meson-info.json
builddir/meson-logs/: meson-log.txt
builddir/meson-private/: cmd_line.txt  coredata.dat.prev  sanitycheckc.c
env/: pyvenv.cfg
src/: 2  42sh.c  meson.build  test.c  test.h
src/ast/: alias.c  ast.c  ast.h  ast_eval.c  functions.c  meson.build  redirection.c  redirection.h  subshell.c  vars.c
src/builtins/: builtin.h  cd.c  dot.c  echo.c  exit.c  export.c  meson.build  unset.c
src/evalexpr/: eval_exp.c  eval_exp.h  stack.c  stack.h
src/lexer/: lexer.c  lexer.h  meson.build  token.c  token.h
src/parser/: parser.c  parser.h
src/utils/: utils.c  utils.h  vec.c  vec.h
tests/: 1  echo_test.c  exec_tests.sh  lexer_tests.c  parser_tests.c  run_tests  test_suite.py  tests.sh  tests.yml  tmp  unit_tests.c
tests/test_files/: test1  test1_res  test2  test21  test22  test2_res  test3  test3_res  test4
